# vibe-code-villager

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tile_documentation.txt
.claude/: settings.local.json
src/: App.tsx  pixi.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: GameCanvas.tsx  GrassBackground.tsx  PawnSprite.tsx  TownCenter.tsx
src/components/tilemap/: TilemapRenderer.tsx  mapData.ts  tileUtils.ts
src/components/ui/: ControlPanel.tsx  SetupPanel.tsx
src/hooks/: useClaudeEvents.ts
src/stores/: villagerStore.ts
src/styles/: index.css
